<resources>
    <string name="app_name">MyCheckpoint</string>
    <string name="title_activity_my_events">MyEventsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_day">Day</string>
    <string name="menu_three">Three</string>
    <string name="menu_week">Week</string>
    <string name="menu_month">Month</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
</resources>
