<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_day" />
        <item
            android:id="@+id/nav_three"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_three" />
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_week" />
        <item
            android:id="@+id/nav_month"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_month" />
    </group>

    <item android:title="Calendars">
        <menu>
            <item
                android:id="@+id/nav_calendars"
                android:title="See all Calendars" />
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
