<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_day">

    <fragment
        android:id="@+id/nav_day"
        android:name="tech.mycheckpoint.ui.day.DayFragment"
        android:label="@string/menu_day"
        tools:layout="@layout/fragment_day" />

    <fragment
        android:id="@+id/nav_three"
        android:name="tech.mycheckpoint.ui.three.ThreeFragment"
        android:label="@string/menu_three"
        tools:layout="@layout/fragment_three" />

    <fragment
        android:id="@+id/nav_week"
        android:name="tech.mycheckpoint.ui.week.WeekFragment"
        android:label="@string/menu_week"
        tools:layout="@layout/fragment_week" />

    <fragment
        android:id="@+id/nav_month"
        android:name="tech.mycheckpoint.ui.month.MonthFragment"
        android:label="@string/menu_month"
        tools:layout="@layout/fragment_month" />

    <fragment
        android:id="@+id/nav_calendars"
        android:name="tech.mycheckpoint.ui.calendars.CalendarsFragment"
        android:label="Calendars"
        tools:layout="@layout/fragment_calendars" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="tech.mycheckpoint.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="tech.mycheckpoint.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_main" />
</navigation>